--- a/webextensions/resources/group-tab.html
+++ b/webextensions/resources/group-tab.html
@@ -13,6 +13,7 @@
     display: flex;
     flex-direction: column;
     left: 0;
+    padding: 1em 1em 0;
     position: fixed;
     right: 0;
     top: 0;
@@ -21,6 +22,7 @@
   h1 {
     display: flex;
     flex-direction: row;
+    margin: 0;
   }
 
   h1::before {
@@ -41,9 +43,19 @@
     display: none;
   }
 
+  header p {
+    margin: 0.5em 0 1em;
+  }
+
+  header {
+    border-bottom: 1px solid;
+    margin-bottom: 1em;
+  }
+
   #tabs {
     display: flex;
     flex-grow: 1;
+    overflow-x: auto;
   }
 
   #tabs img {
