--- a/webextensions/resources/group-tab.html
+++ b/webextensions/resources/group-tab.html
@@ -6,6 +6,7 @@
   :root {
     background: -moz-dialog;
     color: -moz-dialogtext;
+    font: message-box;
   }
 
   main {
@@ -13,7 +14,7 @@
     display: flex;
     flex-direction: column;
     left: 0;
-    padding: 1em 1em 0;
+    padding: 1em 0 0;
     position: fixed;
     right: 0;
     top: 0;
@@ -22,6 +23,7 @@
   h1 {
     display: flex;
     flex-direction: row;
+    line-height: 1.25;
     margin: 0;
   }
 
@@ -29,10 +31,10 @@
     background: ButtonText;
     content: "";
     display: inline-block;
-    height: 1em;
+    height: 1.25em;
     margin-right: 0.25em;
     mask: url("/sidebar/styles/icons/folder-16.svg") no-repeat center / 100%;
-    width: 1em;
+    width: 1.25em;
   }
 
   h1 > * {
@@ -49,7 +51,7 @@
 
   header {
     border-bottom: 1px solid;
-    margin-bottom: 1em;
+    margin: 0 1em 1em;
   }
 
   #tabs {
@@ -77,10 +79,12 @@
   }
 
   #tabs a {
+    align-items: start;
     color: inherit;
     display: flex;
     flex-direction: row;
     text-decoration: none;
+    padding: 0.4em 0;
   }
 
   #tabs a:hover {
@@ -96,7 +100,7 @@
   }
 
   #tabs ul {
-    margin: 0 0 0 1.5em;
+    margin: 0 0 0 20px;
     padding: 0;
   }
 </style>
