Align favicon and label certainly

--- a/webextensions/resources/group-tab.html
+++ b/webextensions/resources/group-tab.html
@@ -95,8 +95,7 @@
   #tabs a span.label {
     display: inline-block;
     margin: 0;
-    padding: 0 0 0 0.25em;
-    vertical-align: text-top;
+    padding: calc(16px - 1em) 0 0 0.25em;
     white-space: pre-wrap;
   }
 
