Use only valid character for localization message key.
Rules: https://developer.mozilla.org/en-US/Add-ons/WebExtensions/API/i18n/Locale-Specific_Message_reference#Member_details

Commands:
$ egrep '^  "' -r _locales | cut -d : -f 2 | cut -d '"' -f 2 | grep '\.' | sort | uniq > /tmp/keys
$ paste -d / /tmp/keys <(cat /tmp/keys | tr '.-' '__') | sed -r -e 's;^;-e s/;' -e 's;$;/g;' | paste -s -d ' ' - > /tmp/patterns
$ git grep -f <(cat /tmp/keys) | cut -d : -f 1 | uniq | xargs sed -i $(cat /tmp/patterns) '{}'

--- a/webextensions/resources/group-tab.html
+++ b/webextensions/resources/group-tab.html
@@ -113,7 +113,7 @@
 <main>
 <header>
 <h1><span id="title"></span><input id="title-field" type="text"></h1>
-<p><label><input id="temporary" type="checkbox">__MSG_groupTab.temporary.label__</label></p>
+<p><label><input id="temporary" type="checkbox">__MSG_groupTab_temporary_label__</label></p>
 </header>
 <div id="tabs"></div>
 </main>
