--- a/webextensions/resources/startup.html
+++ b/webextensions/resources/startup.html
@@ -98,42 +98,42 @@
 
 <h1 id="title">__MSG_extensionName__</h1>
 <div><img id="icon" src="24x24-light.svg" alt=""></div>
-<p>__MSG_message.startup.description.1__
-   <em>__MSG_message.startup.description.key__</em>
-   __MSG_message.startup.description.2__
+<p>__MSG_message_startup_description_1__
+   <em>__MSG_message_startup_description_key__</em>
+   __MSG_message_startup_description_2__
    <em>__MSG_extensionName__</em>
-   __MSG_message.startup.description.3__</p>
-<p>__MSG_message.startup.migrateSessions.before__
-   <a href="__MSG_migrateSessions.link.uri__" target="_blank">__MSG_message.startup.migrateSessions.link.label__</a>
-   __MSG_message.startup.migrateSessions.after__</p>
+   __MSG_message_startup_description_3__</p>
+<p>__MSG_message_startup_migrateSessions_before__
+   <a href="__MSG_migrateSessions_link_uri__" target="_blank">__MSG_message_startup_migrateSessions_link_label__</a>
+   __MSG_message_startup_migrateSessions_after__</p>
 
-<p>__MSG_message.startup.requestPermissions.description__</p>
+<p>__MSG_message_startup_requestPermissions_description__</p>
 <div class="permissions">
   <p class="checkbox">
     <label><input id="bookmarksPermissionGranted"
                   type="checkbox">
-           __MSG_message.startup.requestPermissions.bookmarks__</label></p>
+           __MSG_message_startup_requestPermissions_bookmarks__</label></p>
   <p class="checkbox">
     <label><input id="allUrlsPermissionGranted"
                   type="checkbox">
-           __MSG_message.startup.requestPermissions.allUrls__</label></p>
+           __MSG_message_startup_requestPermissions_allUrls__</label></p>
 <!--
   <p class="checkbox">
     <label><input id="tabHidePermissionGranted"
                   type="checkbox">
-           __MSG_message.startup.requestPermissions.tabHide__</label></p>
+           __MSG_message_startup_requestPermissions_tabHide__</label></p>
 -->
 </div>
 
 <div class="user-chrome-css">
   <span class="arrow top-tabbar">▼</span>
   <span class="arrow sidebar-header">▼</span>
-  <p class="notify">__MSG_message.startup.userChromeCss.notify__</span>
+  <p class="notify">__MSG_message_startup_userChromeCss_notify__</span>
   <p class="description">
-    __MSG_message.startup.userChromeCss.description.1__
-    <a href="__MSG_message.startup.userChromeCss.description.link.uri__" target="_blank">__MSG_message.startup.userChromeCss.description.link.label__</a>
-    __MSG_message.startup.userChromeCss.description.2__
-    <em>__MSG_message.startup.userChromeCss.description.note__</em>
-    __MSG_message.startup.userChromeCss.description.3__
+    __MSG_message_startup_userChromeCss_description_1__
+    <a href="__MSG_message_startup_userChromeCss_description_link_uri__" target="_blank">__MSG_message_startup_userChromeCss_description_link_label__</a>
+    __MSG_message_startup_userChromeCss_description_2__
+    <em>__MSG_message_startup_userChromeCss_description_note__</em>
+    __MSG_message_startup_userChromeCss_description_3__
   </p>
 </div>
