--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -48,13 +48,13 @@
       <div class="after-tabs vbox">
         <div class="newtab-button-box vbox">
           <button class="newtab-action-selector-anchor"
-                  title="__MSG_tabbar.newTabAction.tooltip__"
+                  title="__MSG_tabbar_newTabAction_tooltip__"
                   data-menu-ui="newtab-action-selector"></button>
           <button class="contextual-identities-selector-anchor"
-                  title="__MSG_tabbar.newTabWithContexualIdentity.tooltip__"
+                  title="__MSG_tabbar_newTabWithContexualIdentity_tooltip__"
                   data-menu-ui="contextual-identities-selector"></button>
           <button class="newtab-button"
-                  title="__MSG_tabbar.newTabButton.tooltip__"></button>
+                  title="__MSG_tabbar_newTabButton_tooltip__"></button>
         </div>
       </div>
     </div>
@@ -62,20 +62,20 @@
       <div id="out-of-view-tab-notifier"></div>
       <div class="newtab-button-box vbox">
         <button class="newtab-action-selector-anchor"
-                title="__MSG_tabbar.newTabAction.tooltip__"
+                title="__MSG_tabbar_newTabAction_tooltip__"
                 data-menu-ui="newtab-action-selector"></button>
         <button class="contextual-identities-selector-anchor"
-                title="__MSG_tabbar.newTabWithContexualIdentity.tooltip__"
+                title="__MSG_tabbar_newTabWithContexualIdentity_tooltip__"
                 data-menu-ui="contextual-identities-selector"></button>
         <button class="newtab-button"
-                title="__MSG_tabbar.newTabButton.tooltip__"></button>
+                title="__MSG_tabbar_newTabButton_tooltip__"></button>
       </div>
     </div>
     <ul id="newtab-action-selector">
-      <li data-value="independent">__MSG_tabbar.newTabAction.independent.label__</li>
-      <li data-value="child">__MSG_tabbar.newTabAction.child.label__</li>
-      <li data-value="sibling">__MSG_tabbar.newTabAction.sibling.label__</li>
-      <li data-value="next-sibling">__MSG_tabbar.newTabAction.nextSibling.label__</li>
+      <li data-value="independent">__MSG_tabbar_newTabAction_independent_label__</li>
+      <li data-value="child">__MSG_tabbar_newTabAction_child_label__</li>
+      <li data-value="sibling">__MSG_tabbar_newTabAction_sibling_label__</li>
+      <li data-value="next-sibling">__MSG_tabbar_newTabAction_nextSibling_label__</li>
     </ul>
     <ul id="contextual-identities-selector"></ul>
     <div class="tab-drop-blocker" id="tab-drop-blocker-top"></div>
@@ -105,34 +105,34 @@
                    https://bugzilla.mozilla.org/show_bug.cgi?id=1396031 -->
     <ul id="tabContextMenu">
       <li id="context_reloadTab" class="require-context-tab"
-          title="__MSG_tabContextMenu.reload.label__">__MSG_tabContextMenu.reload.label__</li>
+          title="__MSG_tabContextMenu_reload_label__">__MSG_tabContextMenu_reload_label__</li>
       <li id="context_toggleMuteTab-mute" class="require-context-tab"
-          title="__MSG_tabContextMenu.mute.label__">__MSG_tabContextMenu.mute.label__</li>
+          title="__MSG_tabContextMenu_mute_label__">__MSG_tabContextMenu_mute_label__</li>
       <li id="context_toggleMuteTab-unmute" class="require-context-tab"
-          title="__MSG_tabContextMenu.unmute.label__">__MSG_tabContextMenu.unmute.label__</li>
+          title="__MSG_tabContextMenu_unmute_label__">__MSG_tabContextMenu_unmute_label__</li>
       <li class="separator require-context-tab"></li>
       <li id="context_pinTab" class="require-context-tab"
-          title="__MSG_tabContextMenu.pin.label__">__MSG_tabContextMenu.pin.label__</li>
+          title="__MSG_tabContextMenu_pin_label__">__MSG_tabContextMenu_pin_label__</li>
       <li id="context_unpinTab" class="require-context-tab"
-          title="__MSG_tabContextMenu.unpin.label__">__MSG_tabContextMenu.unpin.label__</li>
+          title="__MSG_tabContextMenu_unpin_label__">__MSG_tabContextMenu_unpin_label__</li>
       <li id="context_duplicateTab" class="require-context-tab"
-          title="__MSG_tabContextMenu.duplicate.label__">__MSG_tabContextMenu.duplicate.label__</li>
+          title="__MSG_tabContextMenu_duplicate_label__">__MSG_tabContextMenu_duplicate_label__</li>
       <li id="context_openTabInWindow" class="require-context-tab require-multiple-tabs"
-          title="__MSG_tabContextMenu.tearOff.label__">__MSG_tabContextMenu.tearOff.label__</li>
+          title="__MSG_tabContextMenu_tearOff_label__">__MSG_tabContextMenu_tearOff_label__</li>
       <li class="separator require-context-tab"></li>
       <li id="context_reloadAllTabs" class="require-multiple-tabs"
-          title="__MSG_tabContextMenu.reloadAll.label__">__MSG_tabContextMenu.reloadAll.label__</li>
+          title="__MSG_tabContextMenu_reloadAll_label__">__MSG_tabContextMenu_reloadAll_label__</li>
       <li id="context_bookmarkAllTabs" class="require-normal-tabs"
-          title="__MSG_tabContextMenu.bookmarkAll.label__">__MSG_tabContextMenu.bookmarkAll.label__</li>
+          title="__MSG_tabContextMenu_bookmarkAll_label__">__MSG_tabContextMenu_bookmarkAll_label__</li>
       <li id="context_closeTabsToTheEnd" class="require-context-tab require-multiple-normal-tabs"
-          title="__MSG_tabContextMenu.closeAfter.label__">__MSG_tabContextMenu.closeAfter.label__</li>
+          title="__MSG_tabContextMenu_closeAfter_label__">__MSG_tabContextMenu_closeAfter_label__</li>
       <li id="context_closeOtherTabs" class="require-context-tab require-multiple-normal-tabs"
-          title="__MSG_tabContextMenu.closeOther.label__">__MSG_tabContextMenu.closeOther.label__</li>
+          title="__MSG_tabContextMenu_closeOther_label__">__MSG_tabContextMenu_closeOther_label__</li>
       <li class="separator"></li>
       <li id="context_undoCloseTab"
-          title="__MSG_tabContextMenu.undoClose.label__">__MSG_tabContextMenu.undoClose.label__</li>
+          title="__MSG_tabContextMenu_undoClose_label__">__MSG_tabContextMenu_undoClose_label__</li>
       <li id="context_closeTab" class="require-context-tab"
-          title="__MSG_tabContextMenu.close.label__">__MSG_tabContextMenu.close.label__</li>
+          title="__MSG_tabContextMenu_close_label__">__MSG_tabContextMenu_close_label__</li>
     </ul>
     <script type="application/javascript" src="/sidebar/sidebar.js"></script>
   </body>
