Add configuration UI to change keyboard shortcuts

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -297,6 +297,10 @@
     </fieldset>
 
 
+    <h1>__MSG_config_shortcuts_caption__</h1>
+    <ul id="shortcuts"></ul>
+
+
     <h1>__MSG_config_advanced_caption__</h1>
     <fieldset>
       <legend>__MSG_config_dropLinksOnTabBehavior_caption__</legend>
