Use library to provide UI for keyboard shortcut customize

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -10,6 +10,7 @@
     <script type="application/javascript" src="/common/common.js"></script>
     <script type="application/javascript" src="/options/Options.js"></script>
     <script type="application/javascript" src="/common/l10n.js"></script>
+    <script type="application/javascript" src="/options/ShortcutCustomizeUI.js"></script>
     <script type="application/javascript" src="/common/permissions.js"></script>
     <script type="application/javascript" src="/background/migration.js"></script>
     <script type="application/javascript" src="/options/init.js"></script>
@@ -298,7 +299,7 @@
 
 
     <h1>__MSG_config_shortcuts_caption__</h1>
-    <ul id="shortcuts"></ul>
+    <div id="shortcuts"></div>
 
 
     <h1>__MSG_config_advanced_caption__</h1>
