Handle new tab command shortcuts

--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -26,6 +26,7 @@
     <script type="application/javascript" src="/common/tree/cache.js"></script>
     <script type="application/javascript" src="/common/tree/contextual-identities.js"></script>
     <script type="application/javascript" src="/common/tree/handlers.js"></script>
+    <script type="application/javascript" src="/common/commands.js"></script>
     <script type="application/javascript" src="/sidebar/color.js"></script>
     <script type="application/javascript" src="/sidebar/cache.js"></script>
     <script type="application/javascript" src="/sidebar/scroll.js"></script>
