Add ability to disable fake context menu on sidebar #1797

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -94,6 +94,11 @@
 
 
     <h1>__MSG_config_context_caption__</h1>
+    <p><label><input id="fakeContextMenu"
+                     type="checkbox">
+              __MSG_config_fakeContextMenu_label__</label></p>
+    <fieldset>
+    <legend>__MSG_config_extraItems_caption__</legend>
     <div id="contextConfigs">
     <p><label><input id="context_reloadTree"
                      type="checkbox">
@@ -123,6 +128,7 @@
                                  type="checkbox">
                           __MSG_config_requestPermissions_bookmarks__</label></p>
     </div>
+    </fieldset>
 
 
     <h1>__MSG_config_newTab_caption__</h1>
