Expose cache checkbox

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -336,6 +336,10 @@
     <p><label><input id="warnOnCloseTabs"
                      type="checkbox">
               __MSG_config_warnOnCloseTabs_label__</label></p>
+    <p><label><input id="useCachedTree"
+                     type="checkbox">
+             __MSG_config_useCachedTree_label__</label></p>
+    <p class="sub">__MSG_config_useCachedTree_description__</p>
     <fieldset>
       <legend>__MSG_config_userStyleRules_label__</legend>
       <p>__MSG_config_userStyleRules_description_before__
@@ -399,9 +403,6 @@
       <p><label><input id="simulateSVGContextFill"
                        type="checkbox">
                __MSG_config_simulateSVGContextFill_label__</label></p>
-      <p><label><input id="useCachedTree"
-                       type="checkbox">
-               __MSG_config_useCachedTree_label__</label></p>
       <p>__MSG_config_colorScheme_caption__
          <label><input type="radio"
                        name="colorScheme" value="photon">
