Collapse input fields for migration

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -349,7 +349,7 @@
                 rows="10"
                 style="width: 100%"></textarea>
     </fieldset>
-    <fieldset>
+    <fieldset class="collapsible collapsed">
       <legend>__MSG_config_importedConfigsFromLegacy_label__</legend>
       <p><label>__MSG_config_legacyConfigsNextMigrationVersion_before__
                 <input id="legacyConfigsNextMigrationVersion"
@@ -364,7 +364,7 @@
                 style="width: 100%"
                 placeholder="__MSG_config_importedConfigsFromLegacy_placeholder__">></textarea>
     </fieldset>
-    <fieldset>
+    <fieldset class="collapsible collapsed">
       <legend>__MSG_config_importedTreeStructureFromLegacy_label__</legend>
       <p>__MSG_config_migrateSessionStore_before__
          <a href="__MSG_migrateSessions_link_uri__">__MSG_config_migrateSessionStore_link_label__</a>
