Suppress logs around cached tree by default

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -399,6 +399,9 @@
         <p><label><input id="logOnCollapseExpand"
                          type="checkbox">
                  __MSG_config_logOnCollapseExpand_label__</label></p>
+        <p><label><input id="logOnCache"
+                         type="checkbox">
+                 __MSG_config_logOnCache_label__</label></p>
       </fieldset>
       <p><label><input id="simulateSVGContextFill"
                        type="checkbox">
