--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -28,6 +28,14 @@
                __MSG_config_sidebarPosition_right__</label>
     </p>
     <p class="sub">__MSG_config_sidebarPosition_description__</p>
+    <p>__MSG_config_sidebarDirection_caption__
+       <label><input type="radio"
+                     name="sidebarDirection" value="1">
+         __MSG_config_sidebarDirection_ltr__</label>
+             <label><input type="radio"
+                           name="sidebarDirection" value="2">
+               __MSG_config_sidebarDirection_rtl__</label>
+    </p>
     <fieldset>
       <legend>__MSG_config_style_caption__</legend>
       <ul id="style-radiogroup">
