--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -344,6 +344,9 @@
     <p><label><input id="warnOnCloseTabs"
                      type="checkbox">
               __MSG_config_warnOnCloseTabs_label__</label></p>
+    <p><label><input id="showCollapsedDescendantsByTooltip"
+                     type="checkbox">
+             __MSG_config_showCollapsedDescendantsByTooltip__</label></p>
     <p><label><input id="useCachedTree"
                      type="checkbox">
              __MSG_config_useCachedTree_label__</label></p>
