Suppress logs around fake context menu by default

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -441,6 +441,9 @@
         <p><label><input id="logOnCache"
                          type="checkbox">
                  __MSG_config_logOnCache_label__</label></p>
+        <p><label><input id="logOnFakeContextMenu"
+                         type="checkbox">
+                 __MSG_config_logOnFakeContextMenu_label__</label></p>
       </fieldset>
       <p><label><input id="simulateSVGContextFill"
                        type="checkbox">
