--- a/webextensions/resources/startup.html
+++ b/webextensions/resources/startup.html
@@ -3,7 +3,7 @@
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
 <meta charset="UTF-8">
-<link rel="icon" href="./16x16-light.svg">
+<link rel="icon" href="./16x16.svg">
 <title></title>
 <style type="text/css">
   body {
