Add configuration UI to take back old behavior #1918 #1888

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -456,6 +456,9 @@
                        name="colorScheme" value="system-color">
            __MSG_config_colorScheme_systemColor__</label>
       </p>
+      <p><label><input id="accelaratedTabCreation"
+                       type="checkbox">
+               __MSG_config_accelaratedTabCreation_label__</label></p>
       <p><label><input id="accelaratedTabDuplication"
                        type="checkbox">
                __MSG_config_accelaratedTabDuplication_label__</label></p>
