--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -456,12 +456,12 @@
                        name="colorScheme" value="system-color">
            __MSG_config_colorScheme_systemColor__</label>
       </p>
-      <p><label><input id="accelaratedTabCreation"
+      <p><label><input id="acceleratedTabCreation"
                        type="checkbox">
-               __MSG_config_accelaratedTabCreation_label__</label></p>
-      <p><label><input id="accelaratedTabDuplication"
+               __MSG_config_acceleratedTabCreation_label__</label></p>
+      <p><label><input id="acceleratedTabDuplication"
                        type="checkbox">
-               __MSG_config_accelaratedTabDuplication_label__</label></p>
+               __MSG_config_acceleratedTabDuplication_label__</label></p>
       <p><label>__MSG_config_maximumAcceptableDelayForTabDuplication_before__
                 <input id="maximumAcceptableDelayForTabDuplication"
                        type="number"
