Report errors for unknown symbols which are not exported

--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -6,6 +6,7 @@
   <head>
     <meta charset="UTF-8">
     <script type="module" src="/sidebar/module/index.js"></script>
+    <script defer type="application/javascript" src="/common/constants.js"></script>
     <script defer type="application/javascript" src="/common/handle-accel-key.js"></script>
     <script defer type="application/javascript" src="/common/tree/base.js"></script>
     <script defer type="application/javascript" src="/common/tree/get-tabs.js"></script>
