Convert options/init.js to an ES module

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -5,8 +5,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <script type="module" src="/options/module/index.js"></script>
-    <script defer type="application/javascript" src="/options/init.js"></script>
+    <script type="module" src="./init.js"></script>
     <link rel="stylesheet" type="text/css" href="options.css"/>
   </head>
   <body>
