--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -6,7 +6,7 @@
   <head>
     <meta charset="UTF-8">
     <script type="module" src="/sidebar/module/index.js"></script>
-    <script defer type="application/javascript" src="/common/handle-accel-key.js"></script>
+    <script type="module" src="/common/handle-accel-key.js"></script>
     <script defer type="application/javascript" src="/sidebar/cache.js"></script>
     <script defer type="application/javascript" src="/sidebar/scroll.js"></script>
     <script defer type="application/javascript" src="/sidebar/pinned-tabs.js"></script>
