--- a/webextensions/background/background.html
+++ b/webextensions/background/background.html
@@ -5,7 +5,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <script type="module" src="/background/module/index.js"></script>
+    <script type="module" src="./index.js"></script>
   </head>
   <body>
     <div id="all-tabs"></div>
