--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -5,7 +5,7 @@
 <html class="left initializing">
   <head>
     <meta charset="UTF-8">
-    <script type="module" src="/sidebar/module/index.js"></script>
+    <script type="module" src="/sidebar/index.js"></script>
     <script type="module" src="/common/handle-accel-key.js"></script>
     <link rel="stylesheet" type="text/css" href="/sidebar/sidebar.css"/>
     <style id="size-definition" type="text/css"></style>
