Don't load same file twice

--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -5,9 +5,9 @@
 <html class="left initializing">
   <head>
     <meta charset="UTF-8">
-    <script type="module" src="/sidebar/index.js"></script>
+    <script type="module" src="./index.js"></script>
     <script type="module" src="/common/handle-accel-key.js"></script>
-    <link rel="stylesheet" type="text/css" href="/sidebar/sidebar.css"/>
+    <link rel="stylesheet" type="text/css" href="./sidebar.css"/>
     <style id="size-definition" type="text/css"></style>
     <style id="contextual-identity-styling" type="text/css"></style>
     <link id="style-loader" rel="stylesheet" type="text/css" href=""/>
@@ -107,6 +107,5 @@
       <li id="context_closeTab" class="require-context-tab"
           title="__MSG_tabContextMenu_close_label__">__MSG_tabContextMenu_close_label__</li>
     </ul>
-    <script defer type="application/javascript" src="/sidebar/sidebar.js"></script>
   </body>
 </html>
