--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -12,6 +12,7 @@
     <style id="contextual-identity-styling" type="text/css"></style>
     <link id="style-loader" rel="stylesheet" type="text/css" href=""/>
     <style id="browser-theme-definition" type="text/css"></style>
+    <style id="addons-style-rules" type="text/css"></style><!-- this is just a dummy to determine insertion position of actual style definitions -->
     <style id="user-style-rules" type="text/css"></style>
   </head>
   <body>
