Collect codes to operate group tabs to a specific module

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -445,6 +445,7 @@
             <p><label><input id="logFor-background/background-cache" type="checkbox">background/background-cache</label></p>
             <p><label><input id="logFor-background/background" type="checkbox">background/background</label></p>
             <p><label><input id="logFor-background/context-menu" type="checkbox">background/context-menu</label></p>
+            <p><label><input id="logFor-background/handle-group-tabs" type="checkbox">background/handle-group-tabs</label></p>
             <p><label><input id="logFor-background/handle-misc" type="checkbox">background/handle-misc</label></p>
             <p><label><input id="logFor-background/handle-moved-tabs" type="checkbox">background/handle-moved-tabs</label></p>
             <p><label><input id="logFor-background/handle-new-tabs" type="checkbox">background/handle-new-tabs</label></p>
