Allow to log from api-tabs.js

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -421,6 +421,7 @@
         <p><!-- git grep configs.logFor | grep -v common.js | cut -d "'" -f 2 | sed -r -e 's;^(.+)$;            <p><label><input id="logFor-\1" type="checkbox">\1</label></p>;' -->
         <fieldset>
           <legend><label><input id="logFor-common" type="checkbox">__MSG_config_logFor_common__</label></legend>
+            <p><label><input id="logFor-common/api-tabs" type="checkbox">common/api-tabs</label></p>
             <p><label><input id="logFor-common/api-tabs-listener" type="checkbox">common/api-tabs-listener</label></p>
             <p><label><input id="logFor-common/bookmarks" type="checkbox">common/bookmarks</label></p>
             <p><label><input id="logFor-common/cache" type="checkbox">common/cache</label></p>
