Add "Collapse this Tree" and "Expand this Tree" commands and context menu items #1954

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -131,9 +131,15 @@
     <p><label><input id="context_closeOthers"
                      type="checkbox">
               __MSG_context_closeOthers_label__</label></p>
+    <p><label><input id="context_collapseTree"
+                     type="checkbox">
+              __MSG_context_collapseTree_label__</label></p>
     <p><label><input id="context_collapseAll"
                      type="checkbox">
               __MSG_context_collapseAll_label__</label></p>
+    <p><label><input id="context_expandTree"
+                     type="checkbox">
+              __MSG_context_expandTree_label__</label></p>
     <p><label><input id="context_expandAll"
                      type="checkbox">
               __MSG_context_expandAll_label__</label></p>
