--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -149,6 +149,12 @@
     <p class="sub"><label><input id="bookmarksPermissionGranted"
                                  type="checkbox">
                           __MSG_config_requestPermissions_bookmarks__</label></p>
+    <p class="sub"><label>__MSG_config_bookmarkTreeFolderName_before__
+                          <input id="bookmarkTreeFolderName"
+                                 type="text"
+                                 style="width: 100%">
+                          __MSG_config_bookmarkTreeFolderName_after__</label></p>
+    <p class="sub">__MSG_config_bookmarkTreeFolderName_description__</p>
     </div>
     </fieldset>
     </section>
